# PumexApp

./: .clang-format  .gitmodules  CMakeLists.txt  CMakeSettings.json
shaders/2D/: frag.spv  vert.spv
shaders/3D/: frag.spv  shader.frag  shader.vert  vert.spv
src/: main.cpp
